ajouter le widget et le shortcode most popular cars

--- a/wp-content/themes/twentyseventeen-child/style.css
+++ b/wp-content/themes/twentyseventeen-child/style.css
@@ -2,3 +2,8 @@
 Theme Name: Twenty seven teen child
 Template: twentyseventeen
 */
+.most-popular{
+	list-style-type : none;
+	line-height     : 2.5;
+	margin-left     : 20px;
+}
